--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ build_script: # 构建生成
         {
             #-----------利用docfx命令生成html-----------------------------------------------------start
             & nuget install docfx.console  # -Version 2.18.4 -Source https://www.myget.org/F/docfx/api/v3/index.json
-            & docfx.console\tools\docfx docfx.json
+            & docfx.console\tools\docfx.exe docfx.json
             # & docfx docfx.json
             if ($lastexitcode -ne 0){
               throw [System.Exception] "docfx build failed with exit code $lastexitcode."
