--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,8 @@ build_script: # 构建生成
         if(-Not $env:APPVEYOR_PULL_REQUEST_TITLE)
         {
             #-----------利用docfx命令生成html-----------------------------------------------------start
-            & nuget install docfx.console  # -Version 2.18.4 -Source https://www.myget.org/F/docfx/api/v3/index.json
-            & docfx.console\tools\docfx.exe docfx.json
+            & nuget install docfx.console -Version 2.36.2 # -Source https://www.myget.org/F/docfx/api/v3/index.json
+            & docfx.console.2.36.2\tools\docfx.exe docfx.json
             # & docfx docfx.json
             if ($lastexitcode -ne 0){
               throw [System.Exception] "docfx build failed with exit code $lastexitcode."
